kubernetes/base/apps/media/ytptube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ytptube
  namespace: media
  labels:
    app: ytptube
spec:
  selector:
    app: ytptube
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: gluetun
      port: 9999
      targetPort: 9999
      protocol: TCP
