kubernetes/base/apps/media/ytptube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytptube
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: ytptube.internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: YTPTube
    gethomepage.dev/icon: youtube.png
    gethomepage.dev/description: Video downloader with French VPN
    gethomepage.dev/pod-selector: "app=ytptube"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ytptube.internal
      secretName: ytptube-tls
  rules:
    - host: ytptube.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ytptube
                port:
                  number: 8081
